tests/type/bad/function_arg_type.hel
foreign io_unit: IO<()>;

f = (a: i32): i32 { a + 1 };
x = f(true);

main = io_unit;
